--- a/src/app/products/components/product-card/product-card.component.html
+++ b/src/app/products/components/product-card/product-card.component.html
@@ -5,8 +5,8 @@
         <br>
         <br>
         <img [src]="product.picture.large" alt=" ">
-        <input type="text" inputString name="Value" #inputValue value = />
-        <h3 #result></h3>
+        <input type="text" inputString name="Value" #input value = />
+        <h3 >{{input.value}}</h3>
         <ng-content></ng-content>
     </div>  
 </div> 
