--- a/src/app/products/components/product-card-list/product-card-list.component.html
+++ b/src/app/products/components/product-card-list/product-card-list.component.html
@@ -1,9 +1,21 @@
-<ng-container *ngFor="let product of products" >
-    <app-product-card *ngIf="product.picture; else skeleton" [product]="product">
-        <ng-container *ngTemplateOutlet="gender; context: {genderPassed : product.gender}"></ng-container>
+<ng-container *ngIf="products.length>1; else more">
+    <ng-container *ngFor="let product of products" >
+        <app-product-card *ngIf="product.picture ; else skeleton" [product]="product" [editable]="false">
+            <ng-container *ngTemplateOutlet="gender; context: {genderPassed : product.gender}"></ng-container>
+            
+        </app-product-card>
+    
         
-    </app-product-card>
+    </ng-container>
 </ng-container>
+
+<ng-template #more >
+        <app-product-card *ngIf="products.picture ; else skeleton" [product]="products" [editable]="true" (currentValue) = doneButton($event) (currentValue)="cancelButton()">
+            <ng-container *ngTemplateOutlet="gender; context: {genderPassed : products.gender}"></ng-container>
+                   
+        </app-product-card>
+</ng-template>
+
 
 <ng-template #skeleton >
         <br>
@@ -14,4 +26,7 @@
     <br>
     <p>User is {{gender}}</p>
 </ng-template>
+
+
+
 
