--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-product-card-list ></app-product-card-list>
+<!-- <app-product-card-list></app-product-card-list> -->
+<router-outlet></router-outlet>
